# mav

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.cjs  AUTHORS.md  NOTICE  TODO.md  knip.config.ts  package.json
.github/workflows/: format-check.yml
apps/desktop/: README.md  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: TitleBar.tsx
apps/web/: next.config.mjs  package.json  playwright.config.ts  postcss.config.cjs  tailwind.config.ts  tsconfig.json
apps/web/lib/: redirects.js
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  manifest.ts  preconnect-resources.tsx  robots.ts
apps/web/src/app/(main)/: layout.tsx  page.tsx
apps/web/src/components/: Analytics.tsx  CheckLocalSettings.tsx  ClientProviders.tsx  InputField.tsx  NoJSMessage.tsx  SkipNav.tsx  index.tsx
apps/web/src/hooks/: index.ts  useReusableSetState.ts  useScrollBounds.ts
apps/web/src/utils/: generateCSP.ts  index.ts
apps/website/: next.config.js  package.json
apps/website/src/: constants.ts  middleware.ts
apps/website/src/app/: preconnect-resources.tsx
apps/website/src/app/(main)/: layout.tsx  page.tsx
apps/website/src/types/: characters.ts  users.ts
apps/website/src/utils/: api.ts  apiNoCookies.ts  displayer.ts  generateItems.ts  paypal.ts
apps/widget/: index.html  tsconfig.json
(+135 files in other folders)
