[package]
name = "myartverse-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["Kerby Keith Aquino"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "notification-all", "clipboard-all",
  "window-set-maximizable",
  "window-hide",
  "window-unminimize",
  "window-set-position",
  "window-minimize",
  "window-start-dragging",
  "window-close",
  "window-unmaximize",
  "window-show",
  "window-set-decorations",
  "window-request-user-attention",
  "window-set-title",
  "window-maximize",
  "window-set-skip-taskbar",
  "window-set-closable",
  "window-set-resizable",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
